trying to set data but it failed

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -11,5 +11,6 @@
   <body>
     <h1 class="lightStatus"></h1>
     <button class="lightButton">Click Me!</button>
+    <button class="secondButton">I am the Second one!</button>
   </body>
 </html>
