the second button is ready to use

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -23,13 +23,20 @@
 
 
     <!-- here is our code -->
-    <div class="mt-5">
-      <div style="margin-left: 30%"><h1 class="lightStatus" id="lighstat"></h1></div>
-      
-    </div>
-  <div class="mx-auto" style="width: 200px;">
-  <button type="button" class="btn btn-primary" id="clickme">ClickMe!</button>
-  </div>
+    <h2>
+    <div class="mt-5"></div>
+    <div class="mx-auto w-25"   id="lighstat"></div>
+  </h2>
+    <ul class="mt-5">
+        <div class="mx-auto" style="width: 150px;">
+        <button type="button" class="btn btn-primary" id="clickme">ClickMe!</button>
+      </div>
+    </ul>
+    <ul>
+        <div class="mx-auto" style="width: 200px;">
+        <button type="button" class="btn btn-danger" id="second">I am the second!</button>
+      </div>
+    </ul>
 
     <!-- <button class="lightButton">Click Me!</button> -->
     <!-- <button class="secondButton">I am the Second one!</button> -->
