try to positioning

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -1,44 +1,74 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body class="p-3 mb-2 bg-secondary text-white">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <link rel="stylesheet" href="style.css">
+
+  <title>Hello, world!</title>
+</head>
+
+<body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script src="script.js"></script>
 
 
 
-    <!-- here is our code -->
-    <h2>
+  <!-- here is how we write new code  -->
+  <div class="new_heading m-5">
+
+    <div class="light_new p-5">
+      <div id="lighstat"></div>
+    </div>
+    <div class="button_container p-4">
+        <button type="button" class="btn btn-primary">I am new</button>
+        <button type="button" class="btn btn-primary">I am new</button>
+
+    </div>
+
+
+
+
+
+  </div>
+
+
+  <!-- here is our code -->
+  <h2>
     <div class="mt-5"></div>
-    <div class="mx-auto w-25"   id="lighstat"></div>
+    <!-- <div class="mx-auto w-25" id="lighstat"></div> -->
   </h2>
-    <ul class="mt-5">
-        <div class="mx-auto" style="width: 150px;">
-        <button type="button" class="btn btn-primary" id="clickme">ClickMe!</button>
-      </div>
-    </ul>
-    <ul>
-        <div class="mx-auto" style="width: 200px;">
-        <button type="button" class="btn btn-danger" id="second">I am the second!</button>
-      </div>
-    </ul>
+  <ul class="mt-5">
+    <div class="mx-auto" style="width: 150px;">
+      <button type="button" class="btn btn-primary" id="clickme">ClickMe!</button>
+    </div>
+  </ul>
+  <ul>
+    <div class="mx-auto" style="width: 200px;">
+      <button type="button" class="btn btn-danger" id="second">I am the second!</button>
+    </div>
+  </ul>
 
-    <!-- <button class="lightButton">Click Me!</button> -->
-    <!-- <button class="secondButton">I am the Second one!</button> -->
-  </body>
+  <!-- <button class="lightButton">Click Me!</button> -->
+  <!-- <button class="secondButton">I am the Second one!</button> -->
+</body>
+
 </html>
