make my setting

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -39,9 +39,12 @@
       <div id="lighstat"></div>
     </div>
     <div class="button_container p-4">
-        <button type="button" class="btn btn-primary">I am new</button>
-        <button type="button" class="btn btn-primary">I am new</button>
-
+        <div>
+          <button type="button" class="btn btn-success m-3">Success</button>
+        </div>
+        <div>
+          <button type="button" class="btn btn-primary m-3">Primary</button>
+        </div>
     </div>
 
 
