mastering the positioning

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -28,27 +28,24 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  <script src="script.js"></script>
+
 
 
 
   <!-- here is how we write new code  -->
-  <div class="new_heading m-5">
+  <div class="new_heading m-5 p-3">
 
-    <div class="light_new p-5">
+    <div class="light_new m-auto p-5">
       <div id="lighstat"></div>
     </div>
-    <div class="button_container p-4">
-        <div>
-          <button type="button" class="btn btn-success m-3">Success</button>
-        </div>
-        <div>
-          <button type="button" class="btn btn-primary m-3">Primary</button>
-        </div>
+    <div class="button_container p-4 m-auto">
+      <div>
+        <button type="button" class="btn btn-success m-3" id="success">Success</button>
+      </div>
+      <div>
+        <button type="button" class="btn btn-primary m-3">Primary</button>
+      </div>
     </div>
-
-
-
 
 
   </div>
@@ -72,6 +69,7 @@
 
   <!-- <button class="lightButton">Click Me!</button> -->
   <!-- <button class="secondButton">I am the Second one!</button> -->
+  <script src="script.js"></script>
 </body>
 
 </html>
