try to positioning

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -35,10 +35,13 @@
   <!-- here is how we write new code  -->
   <div class="new_heading m-5 p-3">
 
-    <div class="light_new m-auto p-5">
-      <div id="lighstat"></div>
+    <div class="light_new mx-auto p-5">
+      <div id="lighstat">
+
+      </div>
     </div>
-    <div class="button_container p-4 m-auto">
+
+    <div class="button_container p-4 ">
       <div>
         <button type="button" class="btn btn-success m-3" id="success">Success</button>
       </div>
@@ -46,7 +49,6 @@
         <button type="button" class="btn btn-primary m-3">Primary</button>
       </div>
     </div>
-
 
   </div>
 
@@ -66,6 +68,7 @@
       <button type="button" class="btn btn-danger" id="second">I am the second!</button>
     </div>
   </ul>
+
 
   <!-- <button class="lightButton">Click Me!</button> -->
   <!-- <button class="secondButton">I am the Second one!</button> -->
