the best desgin

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -21,6 +21,10 @@
   <link href="https://fonts.googleapis.com/css?family=Acme|Bree+Serif|Montserrat:300i,400,400i,500,700&display=swap"
     rel="stylesheet">
 
+
+  <!-- LEds Statue Font  -->
+  <link href="https://fonts.googleapis.com/css?family=Bitter:700&display=swap" rel="stylesheet">
+
   <title>Esp-Ahmad!</title>
 </head>
 
@@ -71,6 +75,8 @@
       <h1 id="lighstat"></h1>
     </div>
     <!-- End of the led Statue Div -->
+
+    <img id="symbol-ard" src="ard-png.webp" alt="" height="115px" width="200px">
 
   </div>
 
